<resources>
    <string name="app_name">Uber Fare App</string>
    <string name="estimateBtn">Estimate Ride Cost</string>
    <string name="milesString">How many miles is your trip?</string>
    <string name="smartCar">Smart Car</string>
    <string name="sedan">Sedan</string>
    <string name="miniVan">Minivan</string>
    <string name="typeOfCar">Which type of car would you like?</string>
    <string name="milesHint">0 Miles</string>
    <string name="spinnerHint">Car Type</string>
    <string name="btnBack">Back</string>
    <string name="yourTotal">Your Total:</string>

    <!--    <string-array name="carSpinnerArray">-->
<!--        <item>Smart Car</item>-->
<!--        <item>Sedan</item>-->
<!--        <item>Minivan</item>-->
<!--    </string-array>-->
</resources>