<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/TVMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milesString"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        />

    <EditText
        android:id="@+id/ETMiles"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:ems="8"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:hint="@string/milesHint"
        android:textAlignment="center"
        android:inputType="number"
        />

    <TextView
        android:id="@+id/TVCarType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeOfCar"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />


    <Spinner
        android:id="@+id/carSpinner"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:prompt="@string/spinnerHint"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/estimateBtn" />

</LinearLayout>